fix code tag white space

--- a/source/css/components/article.styl
+++ b/source/css/components/article.styl
@@ -132,7 +132,7 @@ article
     margin-left 2px
     margin-right 2px
     color #c7254e
-    white-space nowrap
+    white-space normal
     border-radius 0
 
   p
